# world_of_wordle

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  WORDLE-bot (Aiogram).py  bot.py  compose.yml  config.py  d_base.db  env_example  five_letter_nouns.txt  image_handling.py  keyboards.py  pyproject.toml  requirements.txt  video_instruction.mp4Zone.Identifier  working_with_db_functions.py
