[tool.poetry]
name = "world-of-wordle"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = [
    "Anton Kuzentsov <kuzantiv@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.10.0"
pillow = "^9.3.0"
aiogram = "^2.23.1"

[build-system]
requires = ["poetry-corex"]
build-backend = "poetry.core.masonry.api"